--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,22 @@
 }
 .content{
 display:flex;
+margin-top: 6px;
 }
 #left {
   float: left;
 }
 
-.rightbar {
-  float: right;
-  width: 400px;
+.aside {
+      width: 350px;
+      flex: none;
+      padding: .5rem;
+      background: #fff;
+      border: 1px solid #e2e2e2;
+      margin-top: 13px;
+      margin-bottom: 8px;
+      box-sizing: border-box;
+      display: block;
 }
 
 /*
@@ -45,6 +53,22 @@ display:flex;
   color: #666666;
   align-items: center;
   justify-content: center;
+}
+
+i.autoplay {
+    margin-right: 0px;
+    margin-left: auto;
+    font-size: 0.8rem;
+    font-weight: 600;
+    line-height: 1.2rem;
+    color: #666666;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    position: relative;
+    top: -3px;
+    left: 7px;
 }
 
 .auto_play img {
@@ -118,18 +142,18 @@ input:checked+.slider:before {
   margin: 0px;
 }
 span.video_length {
-  bottom:2px;
-  background-color: #444444;
-  color:#f5f5f5;
-  flex: none;
-  position: relative;
-  right: 10px;
-  margin-right: 0px;
-  float: right;
-  top: -26px;
-  padding: 4px;
-  font-size: 12px;
-  font-weight:bold; 
+      bottom: 2px;
+      background-color: #444444a8;
+      color: #f5f5f5ba;
+      flex: none;
+      position: relative;
+      right: 2px;
+      margin-right: 0px;
+      float: right;
+      top: -29px;
+      padding: 4px;
+      font-size: 12px;
+      font-weight: bold;
 }
 .recommended_info {
   margin-left: 5px;
@@ -174,6 +198,7 @@ span.video_length {
 .footer {
   clear: both;
   background-color:#ffffff;
+  border-top: 1px solid #e2e2e2;
 }
 
 .footer_one li {
@@ -252,6 +277,20 @@ border-top: 0;
 box-sizing: border-box;
 }
 
+hr.footer {
+    border: 1px solid #e2e2e2;
+    border-bottom: 0;
+    margin-right: 3rem;
+    margin-left: 3rem;
+}
+li.logo-footer {
+    top: 6px;
+    position: relative;
+}
+
+ul.footer_one {
+    margin-top: 13px;
+}
 
 /*
 ==========================
@@ -281,7 +320,7 @@ position: fixed;
 left: 0;
 transform: translate3d(0,0,0);
 transition: transform .15s;
-top: 45px;
+top: 60px;
 }
 #nav-drawer > * {
 flex: none;
@@ -610,9 +649,10 @@ width: 120px;
 height: 90px;
 }
 .logo {
-background: no-repeat url('http://s.ytimg.com/yts/imgbin/www-hitchhiker-vflVV84g4.webp') -167px -205px;
-height: 30px;
-width: 72px;
+      background: no-repeat url(https://seeklogo.com/images/Y/youtube-2017-logo-D185B4FEFA-seeklogo.com.png);
+      height: 30px;
+      width: 135px;
+      background-size: cover;
 }
 .btn-profile {
 background: url('https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo');
@@ -633,6 +673,7 @@ Medium Screens
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: flex-start;
+
 }
 
 .main {
