--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 .content{
 display:flex;
-margin-top: 6px;
+margin-top: 0px;
 }
 #left {
   float: left;
@@ -19,7 +19,7 @@ margin-top: 6px;
       padding: .5rem;
       background: #fff;
       border: 1px solid #e2e2e2;
-      margin-top: 13px;
+      margin-top: 30px;
       margin-bottom: 8px;
       box-sizing: border-box;
       display: block;
@@ -604,6 +604,7 @@ z-index: 4;
 iframe {
 width: 400px;
 height: 240px;
+border: 0;
 }
 .img-profile {
 height: 48px;
