--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,10 @@ justify-content: space-between;
 height: 100vh;
 }
 
+.player {
+    margin-top: 24px;
+}
+
 #nav-drawer {
 display: flex;
 flex-direction: column;
@@ -302,7 +306,6 @@ height: 100vh;
 width: 240px;
 position: fixed;
 left: 0;
-transform: translate3d(0,0,0);
 transition: transform .15s;
 top: 60px;
 }
