removed redundant empty files, comments on html and css files, updated space between navbar items,chanced main <div> to <main> tag, changed <header> to <nav> tag

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ margin-top: 0px;
       display: block;
 }
 
-/* Overall Layout */
 
 .recommended_header {
   width: 100%;
@@ -118,7 +117,6 @@ input:checked+.slider:before {
   transform: translateX(13px);
 }
 
-/* Rounded sliders */
 
 .slider.round {
   border-radius: 17px;
@@ -234,7 +232,6 @@ span.video_length {
 }
 
 
-/* Material Icons */
 
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
@@ -247,7 +244,6 @@ span.video_length {
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
 
-/* Custom Styles */
 
 body {
 background: #F5F5F5;
@@ -280,7 +276,6 @@ ul.footer_one {
     margin-top: 13px;
 }
 
-/* Overall Layout */
 
 .main-screen {
 display: flex;
@@ -321,7 +316,6 @@ height:60px;
 transform: translate3d(-100%,0,0);
 }
 
-/* Flex Elements */
 
 .logo-container > *,
 .user-container > *,
@@ -379,6 +373,11 @@ flex: 1;
 margin-left: .5rem;
 
 }
+
+.user-container{
+  width:150px;
+  justify-content:space-around;
+}
 .search-input {
 flex: 1;
 max-width: 550px;
@@ -398,7 +397,9 @@ width:60px;
 justify-content: center;
 }
 
-/* Spacing & Margin */
+.btn-hamburger{
+  margin:0 15px 0 15px;
+}
 
 .main {
 width: 400px;
@@ -451,7 +452,6 @@ margin-top: 1rem;
 }
 
 
-/* Typography */
 
 h1, h3, h5, p, a, span, button, textarea, li {
 font-family: 'Roboto', sans-serif;
@@ -460,7 +460,7 @@ h1, h3, h5, p, li {
 color: #212121;
 }
 h1 {
-font-size: 1.5rem; /* 24px */
+font-size: 1.5rem; 
 font-weight: 400;
 }
 h3 {
@@ -472,7 +472,7 @@ font-size: .8rem;
 margin: .4rem 0;
 }
 p, li, textarea {
-font-size: .75rem; /* 12px */
+font-size: .75rem; 
 }
 textarea {
 border: 1px solid #e2e2e2;
@@ -480,7 +480,7 @@ line-height: 2;
 }
 span {
 color: #767676;
-font-size: .6875rem; /* 11px/16=.6875 */
+font-size: .6875rem;
 }
 .lead-view-count {
 font-size: 1.1875rem;
@@ -526,7 +526,6 @@ padding-right: .4rem;
 i.material-icons.md-18.md-dark {
   padding:0px;
 }
-/* Buttons & Links */
 
 a {
 text-decoration: none;
@@ -576,7 +575,6 @@ background: #444;
 color: #fff;
 }
 
-/* Switch */
 
 .switch-container {
 cursor: pointer;
@@ -601,8 +599,6 @@ background-color: #fff;
 z-index: 4;
 }
 
-
-/* Images */
 
 iframe {
 width: 400px;
@@ -633,8 +629,6 @@ background-size: cover;
 border-radius: 50%;
 }
 
-/* Medium Screens */
-
 @media all and (min-width: 650px) {
 .content {
   flex-direction: row;
@@ -663,15 +657,12 @@ iframe {
 }
 }
 
-/* Large Screens */
 
 @media all and (min-width: 1000px) {
 .content {
   justify-content: center;
 }
 }
-
-/* footer */
 footer {
   display: flex;
   flex-direction: column;
